--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-* {
+*, *::before, *::after {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 :root {
@@ -33,4 +34,8 @@ h1, h2, h3, h4, h5, h6 {
 
 button {
     cursor: pointer;
+}
+
+ul {
+    list-style: none;
 }
