--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ a:-webkit-any-link {
 body {
     margin: 0;
     padding: 0;
+    font-family: "Poppins", sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
