--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
+    background: url("./assets/backgrounds/background-app.webp") 0 0/cover repeat;
 }
 
 h1, h2, h3, h4, h5, h6 {
