--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
-    background: url("./assets/backgrounds/background-app.webp") 0 0/cover repeat;
+    /*background-color: royalblue;*/
+    background: linear-gradient(90deg, #cfecd0, #a0cea7, #9ec0db);
 }
 
 h1, h2, h3, h4, h5, h6 {
